fix alignment and spacing on github content

--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -66,6 +66,14 @@
     margin-top: 1.5em;
     font-size: .85em;
 
+    * {
+      vertical-align: middle;
+    }
+
+    iframe {
+      margin-left: .25em;
+    }
+
     a:hover {
       text-decoration: underline;
     }
